--- a/public/darwin.html
+++ b/public/darwin.html
@@ -11,7 +11,7 @@
   <!-- Open Graph -->
   <meta property="og:title" content="Year 8 Darwin – Honeyland Digital Yearbook" />
   <meta property="og:description" content="Discover the digital yearbook page for Darwin, Year 8 at Honeyland College, Ipaja." />
-  <meta property="og:image" content="../assetsC/images/honeyland logo.webp" />
+  <meta property="og:image" content="https://honeylandcollege.github.io/ict-exhibition/assetsC/images/honeyland logo.webp" />
   <meta property="og:url" content="https://honeylandcollege.github.io/ict-exhibition/darwin.html" />
   <meta property="og:type" content="website" />
 
