--- a/public/graham.html
+++ b/public/graham.html
@@ -11,7 +11,7 @@
     <!-- Open Graph -->
     <meta property="og:title" content="Year 8 Graham – Honeyland Digital Yearbook" />
     <meta property="og:description" content="Discover the digital yearbook page for Graham, Year 8 at Honeyland College, Ipaja." />
-    <meta property="og:image" content="../assetsC/images/honeyland logo.webp" />
+    <meta property="og:image" content="https://honeylandcollege.github.io/ict-exhibition/assetsC/images/honeyland logo.webp" />
     <meta property="og:url" content="https://honeylandcollege.github.io/ict-exhibition/graham.html" />
     <meta property="og:type" content="website" />
 
