--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Open Graph -->
     <meta property="og:title" content="Honeyland Year 8 Digital Yearbook" />
     <meta property="og:description" content="Digital ICT yearbook by Year 8 students of Honeyland College, Ipaja." />
-    <meta property="og:image" content="https://honeylandcollege.github.io/ict-exhibition/assetsC/images/honeyland logo.webp" />
+    <meta property="og:image" content="https://honeylandcollege.github.io/ict-exhibition/assets/images/preview_img.webp" />
     <meta property="og:url" content="https://honeylandcollege.github.io/ict-exhibition/" />
     <meta property="og:type" content="website" />
 
