--- a/public/franklin.html
+++ b/public/franklin.html
@@ -11,7 +11,7 @@
     <!-- Open Graph -->
     <meta property="og:title" content="Year 8 Franklin – Honeyland Digital Yearbook" />
     <meta property="og:description" content="Discover the digital yearbook page for Franklin, Year 8 at Honeyland College, Ipaja." />
-    <meta property="og:image" content="https://honeylandcollege.github.io/ict-exhibition/assetsC/images/honeyland logo.webp" />
+    <meta property="og:image" content="https://honeylandcollege.github.io/ict-exhibition/assets/images/preview_img.webp" />
     <meta property="og:url" content="https://honeylandcollege.github.io/ict-exhibition/franklin.html" />
     <meta property="og:type" content="website" />
 
