--- a/public/darwin.html
+++ b/public/darwin.html
@@ -41,7 +41,7 @@
         <div class="card mt-4">
           <img loading="lazy" src="../assetsD/images/8D.webp" alt="Group picture" width="100%" height="auto">
           <div class="card-body">
-            <h5 class="card-text text-center fw-bold">Class of Dazzling Mind</h5>
+            <h5 class="card-text text-center fw-bold">Class of Darwin Baddies Popstars</h5>
 
           </div>
 
